# transformers

./: .gitignore  README.md
01-raw-llm/: README.md  llm.ipynb  text.txt
01-raw-transformers/: README.md  transformers.ipynb
02-transformers-explanation/: main-pt-br.ipynb  main.ipynb  maint-en-us.ipynb
03-sentiment-analysis/: README.md  basic-dnn.ipynb  lstm.ipynb  pyproject.toml  transformer.ipynb
04-lang-gpt/: lang-gpt-main.ipynb  lang-gpt.py
05-text-generation-llm/: README.md  main.ipynb
06-text-generation-llm-gpt2/: .dockerignore  Dockerfile  README.md  main.ipynb  pyproject.toml  run.py
99-other-topics/: README.md  docker.md  poetry.md  tutorial_pytorch_gpu.ipynb
