[tool.poetry]
name = "sentiment-analysis"
version = "1.0"
description = ""
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
torch = { version = "^2.5.0", source = "pytorch" }
torchvision = {version = "^0.20.1+cu118", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu118", source = "pytorch"}
ipykernel = "^6.29.5"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
tokenizers = "^0.21.0"
transformers = "^4.47.0"
spacy = "^3.8.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
