[tool.poetry]
name = "gpt2-text-generator"
version = "0.1.0"
description = "A GPT-2 text generation script using transformers and TensorFlow."
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
transformers = "4.44.2"
tensorflow = "2.17.0"
argparse = "1.1"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
